--- a/gb/21/9/22/n13251914.md
+++ b/gb/21/9/22/n13251914.md
@@ -1,59 +1,62 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/gfptuw363/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/gfptuw363/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/gfptuw363/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/gfptuw363/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/gfptuw363/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gfptuw363/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/gfptuw363/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/gfptuw363/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/gfptuw363/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/gfptuw363/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/gfptuw363/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/gfptuw363/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/gfptuw363/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/gfptuw363/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/gfptuw363/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/gfptuw363/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/gfptuw363/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/gfptuw363/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/gfptuw363/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/gfptuw363/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/gfptuw363/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/gfptuw363/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/gfptuw363/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/gfptuw363/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵令人升华 牧师：传统价值观是普遍真理</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13252070-2109212349091886-600x400.jpg" />
-<h6> 2021年9月21日晚，TSamuel Blanco先生和妻女、朋友一同观看了神韵纽约艺术团在麦克艾伦表演艺术中心的演出。（麦蕾／大纪元）
+<h6> 2021年9月21日晚，Samuel Blanco先生和妻女、朋友一同观看了神韵纽约艺术团在麦克艾伦表演艺术中心的演出。（麦蕾／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2021年09月22日讯】（大纪元记者麦蕾美国麦克艾伦报导）2021年9月21日晚，<ahref="https://github.com/gfptuw363/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团在麦克艾伦表演艺术中心（MCALLEN McAllen Performing Arts Center）的演出爆满加座，全场气氛热烈。舞台上，精湛高超的中国古典舞令人陶醉，博大精深的神传文化震撼人心。</p>
-<p>Samuel Blanco先生是第一联合卫理公会的<ahref="https://github.com/gfptuw363/djy/blob/master/gb/tag/%E7%89%A7%E5%B8%88.md#1">牧师</a>，他和妻子、女儿、朋友一同观看了演出，并一见倾心。他称赞，<ahref="https://github.com/gfptuw363/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出出类拔萃，展现了他前所未的<ahref="https://github.com/gfptuw363/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>，其中的价值观令人升华，而且与他的信仰相合，他要将演出推荐给所有的人。</p>
+	<p>【大纪元2021年09月22日讯】（大纪元记者麦蕾美国麦克艾伦报导）2021年9月21日晚，<ahref="https://zh-tw.shenyunperformingarts.org/" target="_blank" rel="noopener noreferrer">神韵纽约艺术团</a>在<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%BE%B7%E5%B7%9E%E9%BA%A6%E5%85%8B%E8%89%BE%E4%BC%A6%E8%A1%A8%E6%BC%94%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83.md#1">德州麦克艾伦表演艺术中心</a>（MCALLEN McAllen Performing Arts Center）的演出爆满加座，全场气氛热烈。舞台上，精湛高超的中国古典舞令人陶醉，博大精深的神传文化震撼人心。</p>
+<p>Samuel Blanco先生是第一联合卫理公会的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%89%A7%E5%B8%88.md#1">牧师</a>，他和妻子、女儿、朋友一同观看了演出，并一见倾心。他称赞，<ahref="https://zh-tw.shenyunperformingarts.org">神韵演出</a>出类拔萃，展现了他前所未见的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>，其中的价值观令人升华，而且与他的信仰相合，他要将演出推荐给所有的人。</p>
 <p>“演出非常卓越！这是我从未见过的，还有整个文化。对于我来说这是一种来自海外的文化，我眼前一新。”Blanco惊叹道，“我绝对喜欢，我会推荐给所有人。”</p>
 <p>他称赞，长袖舞蹈“非常令人钦佩”，他认为这是一种独特的绝技，“不知道她们是如何将长袖收放自如的，一次又一次……就像是水的波映。”</p>
-<p>神韵演出呈现了中国古老的神传文化，创世主带领众神铺垫文化、拯救人类。Blanco表示，他与演出中的神性内涵产生共鸣，从中看到了神与人之间的关系，“在艰难的情况下，神如何出现。”“其中关于信仰的理念和我所相信的非常接近，几乎就是我们所信仰的。”</p>
-<p>神韵致力于复兴中国<ahref="https://github.com/gfptuw363/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>和价值观，这种文化已被共产党破坏殆尽。神韵歌曲告诉人们无神论和进化论是谬论，Blanco表示聆听时受到启发，“我对此感到很惊讶，我之前不知道中国有五千年的有神传历史。（观看演出后）我开始思考，他们所谈论的是什么，那是非常古老（的文化），也许比那还久远。”</p>
-<p>他认为，来自各种文化中的人都能在神韵的价值观中获得启发，因为传统价值观是普遍真理。“我认为对任何文化中的人们都是一种启发，他们可以看到传统理念与现代观念的不同，后者让人感觉不到满足。而传统文化令人感到满足。”</p>
+<p><ahref="http://ShenYun.com" target="_blank" rel="noopener noreferrer">神韵</a>演出呈现了中国古老的<ahref="http://ShenYun.com">神传文化</a>，创世主带领众神铺垫文化、拯救人类。Blanco表示，他与演出中的神性内涵产生共鸣，从中看到了神与人之间的关系，“在艰难的情况下，神如何出现。”“其中关于信仰的理念和我所相信的非常接近，几乎就是我们所信仰的。”</p>
+<p><ahref="https://www.facebook.com/ShenYunPerformingArts/" target="_blank" rel="noopener noreferrer">神韵</a>致力于复兴中国<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>和价值观，这种文化已被共产党破坏殆尽。<ahref="https://www.facebook.com/ShenYunPerformingArts/">神韵歌曲</a>告诉人们无神论和进化论是谬论，Blanco表示聆听时受到启发，“我对此感到很惊讶，我之前不知道中国有五千年的有神传历史。（观看演出后）我开始思考，他们所谈论的是什么，那是非常古老（的文化），也许比那还久远。”</p>
+<p>他认为，来自各种文化中的人都能在<ahref="https://twitter.com/ShenYun" target="_blank" rel="noopener noreferrer">神韵</a>的价值观中获得启发，因为传统价值观是普遍真理。“我认为对任何文化中的人们都是一种启发，他们可以看到传统理念与现代观念的不同，后者让人感觉不到满足。而传统文化令人感到满足。”</p>
+<p><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>官方网站：<ahref="http://ShenYunPerformingArts.org" target="_blank" rel="noopener noreferrer">ShenYunPerformingArts.org</a><br />
+Youtube<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>官方频道： <ahref="https://www.youtube.com/c/shenyun" target="_blank" rel="noopener noreferrer">https://www.youtube.com/c/shenyun</a></p>
 <p>责任编辑：周立恒</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13221130.md#1">劳动节长周末11名温哥华警官遇袭受伤</a></li>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220674.md#1">周末市中心拍电视剧  Burrard桥将锁路</a></li>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220614.md#1">快餐厅美食广场就餐无需出示疫苗卡</a></li>
-<li><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220595.md#1">9月8日：新增814宗确诊</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/9/19/n13244498.md#1">分享中国传统文化 新世纪中秋游园日受褒奖</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/9/19/n13244806.md#1">“唤醒人回归神” 神韵休斯顿两场大爆满</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/9/19/n13245191.md#1">律师行合伙人：神韵编排设计出彩 美丽感人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/9/20/n13245976.md#1">“绝对一流的演出” 律师感受神韵充满善意</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/9/21/n13250400.md#1">神韵复兴五千年传统文化 IT专家赞赏</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/4/n11300386.md#1" target="_blank">林辉：大饥荒 中共却无偿送几内亚万吨大米</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/1/13/n4615407.md#1" target="_blank">怪病神奇痊愈的故事</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/26/n10932836.md#1" target="_blank">张林：间谍国（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869347.md#1" target="_blank">感恩节 法轮大法弟子感念师恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/16/n13238162.md#1">美国男子自称遭外星人多次绑架和植入晶片</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/15/n13237143.md#1">【百年真相】最惨海归博士 萧光琰文革遭灭门</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/14/n13234239.md#1">【未解之谜】穿越时空 二战飞行员的奇遇</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/14/n13233994.md#1">【未解之谜】前世情未了 今生续前缘</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/14/n13234395.md#1">草原女王：成吉思汗的监国公主阿剌海别吉</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/21/n13250822.md#1">【横河观点】美生态健康联盟与武毒所合作曝光</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/21/n13249405.md#1">【军事热点】台海对峙 加速台湾国防准备</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/21/n13250771.md#1">【时事纵横】施暴者上台？留美港人忆太子站惊魂</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/19/n13245464.md#1">李嘉欣富豪丈夫似一夜变老 被拍拄拐杖蹒跚求医</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/20/n13248428.md#1">【秦鹏直播】李子柒失踪 恒大危机撼动华尔街</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/16/n13239059.md#1">李子柒“消失”68天之谜 陷入资本漩涡？</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/19/n13245464.md#1">李嘉欣富豪丈夫似一夜变老 被拍拄拐杖蹒跚求医</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/19/n13245793.md#1">被传怀上第三胎 孙俪工作室幽默回应</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/20/n13245894.md#1">JINJIN“阴转阳”确诊染疫 ASTRO两成员隔离</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/20/n13248325.md#1">贴文纪念安钧璨冥诞 安以轩连续7年没间断</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/20/n13248519.md#1">IG晒录歌照拟闯乐坛？刘嘉玲笑称隔行如隔山</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/19/n13244539.md#1">巨型石斑鱼一口咬下鲨鱼 美国船长看傻眼</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/17/n13241301.md#1">冬瓜是“减肥瓜” 这样吃不花大钱就变瘦</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/19/n13244842.md#1">美国女子死亡45分钟 在女儿产子前活了过来</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/18/n13243559.md#1">柚子皮是宝！1个妙用除臭味、清油垢</a></li>
-<li><a href="https://github.com/gfptuw363/djy/blob/master/gb/21/9/20/n13247176.md#1">台北阿伯在公园吹口琴 两只鹅神奇回应</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/gfptuw363/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/gfptuw363/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/22/n13251914.htm">神韵令人升华 牧师：传统价值观是普遍真理</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/22/n13251914.htm">神韵令人升华 牧师：传统价值观是普遍真理</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/gfptuw363/djy/blob/master/gb/21/9/22/n13251914.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/gfptuw363/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/gfptuw363/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/gfptuw363/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/gfptuw363/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gfptuw363/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/21/9/22/n13251914.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
